--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/CharlieHawker/CountdownTo.js/blob/master/LICENSE",
+      "url": "https://github.com/CharlieHawker/CountdownTo.js/blob/master/LICENSE"
     }
   ],
   "bugs": {
