--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "countdown.to",
   "version": "0.1.2",
   "description": "A small countdown timer",
-  "main": "index.js",
+  "main": "js/countdown.to.js",
   "directories": {
     "test": "test"
   },
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/CharlieHawker/CountdownTo.js#readme",
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-jshint": "^1.12.0",
     "gulp-mocha": "^2.1.3",
     "mocha": "^2.3.3"
   }
