--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
   "homepage": "https://github.com/CharlieHawker/CountdownTo.js#readme",
   "devDependencies": {
     "gulp": "^3.9.0",
-    "gulp-jshint": "^1.12.0",
+    "gulp-jshint": "^2.0.1",
     "gulp-mocha": "^2.1.3",
+    "jshint": "^2.9.2",
     "mocha": "^2.3.3"
   }
 }
